--- a/podfile
+++ b/podfile
@@ -7,6 +7,6 @@
   pod 'Masonry', '~> 1.0.2'
   pod 'MBProgressHUD', '~> 0.9.2'
   pod 'MJExtension', '~> 3.0.13'
-
+  pod 'IQKeyboardManagerSwift', '~> 4.0.9'
 
     end
