--- a/Uhome/Classes/Supporting Files/Plist/Info.plist
+++ b/Uhome/Classes/Supporting Files/Plist/Info.plist
@@ -32,5 +32,9 @@
 	<string></string>
 	<key>CFBundleDisplayName</key>
 	<string>Uhome</string>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
