打开定位 功能权限

--- a/Uhome/Classes/Supporting Files/Plist/Info.plist
+++ b/Uhome/Classes/Supporting Files/Plist/Info.plist
@@ -28,6 +28,10 @@
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
